# puppetbots

./: .gitignore  README.md
TD-Controller/: TD-Controller.20.toe  TD-Controller.30.toe  TD-Controller.35.toe  TD-Controller.37.toe  TD-Controller.62.toe  TD-Controller.75.toe  TD-Controller.81.toe  TD-Controller.82.toe  TD-Controller.84.toe  TD-Controller.toe  setenv.py
TD-Controller/Backup/: TD-Controller.21.toe  TD-Controller.22.toe  TD-Controller.23.toe  TD-Controller.24.toe  TD-Controller.25.toe  TD-Controller.26.toe  TD-Controller.28.toe  TD-Controller.29.toe  (+48 more)
config-editor/: package.json
docs/: README.md  pneumatic-actuators.md  pneumatics-panel.md  production-schedule.md  puppet-construction.md  rokoko-gloves.md  rotating-plate.md  rust-server.md  set_up_raspberry.md  touch-designer.md
hands/: package-lock.json  package.json
mediapipe-td/: TD-Controller.toe
prototype/: Cargo.toml  config.json  config_dummy.json  config_rpi.json  config_rpi_test.json
prototype/fritzing/: MPS20N0040D Pressure Sensor - Raspberry Pi.fzz
prototype/src/: actuator.rs  main.rs  puppet.rs  util.rs  ws_server.rs
prototype/src/puppet/: actuator.rs  custom_servo.rs  hardware.rs  orientation.rs
prototype/src/puppet/actuator/: dummy_interface.rs  rpi_interface.rs
prototype/src/puppet/hardware/: dummy_interface.rs  rpi_interface.rs
prototype/src/puppet/orientation/: dummy_interface.rs  rpi_interface.rs
prototype/src/util/: adafruit_servokit.rs
prototype/util/: actuator_check.py  actuator_check_1.py  actuator_check_2.py  close_actuators.py  connection_check.py  connection_check_servo.py  release_actuators.py  servo_2_test.py  servo_test.py  servo_valve.test.py  stop_flow_servos.py  test_pressure_sensors.py  test_servo.py
rokoko/: sample-data.json  server.py  test_rokoko.py
rust-test/: Cargo.toml
rust-test/src/: main.rs
virtual-show/: package.json  tsconfig.json  webpack.config.js
virtual-show/server/: Cargo.toml  config.json
virtual-show/server/src/: main.rs  ws_server.rs  ytchat.rs
(+21 files in other folders)
