[package]
name = "telepuppet_prototype"
version = "0.1.0"
edition = "2021"
authors = ["Avner Peled <avner.peled@aalto.fi>"]

[[bin]]
name = "prototype"
path = "src/main.rs"

[dependencies]
ws = { version = "*"}
argparse = {version = "*"}
serde = {version = "*", features = ["rc"]}
log = "0.4.17"
serde_derive = {version = "*"}
serde_json = {version = "*"}
nb = { version = "*"}
async-std = { version = "*"}


[target.'cfg(unix)'.dependencies]
ads1x1x = { version = "*"}
embedded-hal = { version = "*"}
linux-embedded-hal = { version = "*"}
adafruit_motorkit = { version = "*"}
pwm-pca9685 = { version = "*"}
