[package]
name = "puppetshow_server"
version = "0.1.0"
authors = ["Avner Peled <avner.peled@aalto.fi>"]

[[bin]]
name = "puppetshow_server"
path = "src/main.rs"

[dependencies]
ws = { version = "*"}
argparse = {version = "*"}
serde = {version = "*"}
serde_derive = {version = "*"}
serde_json = {version = "*"}
byteorder = {version = "*"}
chrono = {version = "*"}
reqwest = { version = "0.11.3", features = ["json", "blocking"] }

